--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
-    "expose-loader": "^3.1.0",
+    "cocoon": "github:nathanvda/cocoon#c24ba53",
+    "cocoon-js": "^0.0.5",
+    "coffee-loader": "^3.0.0",
+    "coffeescript": "1.12.7",
     "jquery": "^3.6.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
